--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@fastify/cors": "^8.0.0",
     "fastify": "^4.2.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.18.2",
